2010-07-01  David Holloway  <dhollowa@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Exposes WebNode::unwrap() and WebNode::constUnwrap() for
        use by other code in WebKit/chromium/src.

        Specific use of these methods is made in WebFrameImpl.cpp.  This is
        preferred to the cast operator call that was happening prior to this
        change.

        https://bugs.webkit.org/show_bug.cgi?id=41477

        * public/WebNode.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::registerPasswordListener):
        (WebKit::WebFrameImpl::notifiyPasswordListenerOfAutocomplete):

git-svn-id: svn://svn.chromium.org/blink/trunk@62349 bbb929c8-8fbe-4397-9dbb-9b2b20218538