third_party/WebKit/WebKit/chromium/src/WebFrameImpl.cpp
@@ -1961,7 +1961,7 @@ bool WebFrameImpl::registerPasswordListener(
     WebInputElement inputElement,
     WebPasswordAutocompleteListener* listener)
 {
-    RefPtr<HTMLInputElement> element = inputElement.operator PassRefPtr<HTMLInputElement>();
+    RefPtr<HTMLInputElement> element(inputElement.unwrap<HTMLInputElement>());
     if (!m_passwordListeners.add(element, listener).second) {
         delete listener;
         return false;
@@ -1972,7 +1972,7 @@ bool WebFrameImpl::registerPasswordListener(
 void WebFrameImpl::notifiyPasswordListenerOfAutocomplete(
     const WebInputElement& inputElement)
 {
-    RefPtr<HTMLInputElement> element = inputElement.operator PassRefPtr<HTMLInputElement>();
+    RefPtr<HTMLInputElement> element(inputElement.unwrap<HTMLInputElement>());
     WebPasswordAutocompleteListener* listener = getPasswordListener(element.get());
     // Password listeners need to autocomplete other fields that depend on the
     // input element with autofill suggestions.
